--- a/bluebrain/sysconfig/daint/modules.yaml
+++ b/bluebrain/sysconfig/daint/modules.yaml
@@ -41,6 +41,11 @@ modules:
       - 'py-bluepy'
       - 'py-bluepyopt'
       - 'brion+python'
+      - 'py-sonata-network-reduction'
+      - 'py-bglibpy'
+      - 'psp-validation'
+      - 'py-bluepysnap'
+      - 'py-neurodamus'
     blacklist:
       - '%gcc'
       - '%intel'
