Deployment February 2022  - Update system packages/compilers  - Adapt to new spack deployment  - Depend on mpi on packages that use system parallel hdf5  - Used latest fmt/spdlog to avoid bug with intel compiler  - Add py-netpyne package

--- a/bluebrain/sysconfig/daint/compilers.yaml
+++ b/bluebrain/sysconfig/daint/compilers.yaml
@@ -150,6 +150,21 @@ compilers:
     environment: {}
     extra_rpaths: []
 - compiler:
+    spec: gcc@11.2.0
+    paths:
+      cc: cc
+      cxx: CC
+      f77: ftn
+      fc: ftn
+    flags: {}
+    operating_system: cnl7
+    target: any
+    modules:
+    - PrgEnv-gnu
+    - gcc/11.2.0
+    environment: {}
+    extra_rpaths: []
+- compiler:
     spec: intel@17.0.4.196
     paths:
       cc: cc
