--- a/bluebrain/sysconfig/daint/modules.yaml
+++ b/bluebrain/sysconfig/daint/modules.yaml
@@ -34,19 +34,21 @@ modules:
     hash_length: 0
     whitelist:
       - 'emsim'
-      - 'neurodamus'
       - 'neurodamus-neocortex'
       - 'neurodamus-hippocampus'
       - 'neurodamus-mousify'
       - 'neuron%intel'
       - 'py-bluepy'
       - 'py-bluepyopt'
-      - 'brion+python'
+        #- 'brion+python'
       - 'py-sonata-network-reduction'
-      - 'py-bglibpy'
+        #- 'py-bglibpy'
       - 'psp-validation'
-      - 'py-bluepysnap'
+        #- 'py-bluepysnap'
       - 'py-neurodamus'
+      - 'py-libsonata'
+      - 'py-netpyne'
+      - 'py-matplotlib'
     blacklist:
       - '%gcc'
       - '%intel'
