--- a/bluebrain/sysconfig/bluebrain5/packages.yaml
+++ b/bluebrain/sysconfig/bluebrain5/packages.yaml
@@ -17,7 +17,7 @@ packages:
     # Keep this aligned with NEURON, otherwise the Spack solver may decide that
     # rolling back to NEURON 8.2.2 with external CoreNEURON is a net win
     require:
-      - one_of: ["%intel", "%nvhpc", "%oneapi"]
+      - one_of: ["%oneapi", "%nvhpc", "%intel"]
   cuda:
     # Pin GCC 11 because CUDA 11.8.0 is incompatible with GCC 12
     # CUDA 12.0.0 should be compatible with GCC 12
@@ -70,32 +70,32 @@ packages:
   model-neocortex:
     variants: ~gpu
     require:
-      - one_of: ["%intel", "%oneapi"]
+      - one_of: ["%oneapi", "%intel"]
   mxnet:
     version: [1.8.0]  # Don't build @1.master because nobody likes moving targets
   neurodamus-hippocampus:
     variants: ~~gpu
     require:
-      - one_of: ["%intel", "%oneapi"]
+      - one_of: ["%oneapi", "%intel"]
   neurodamus-model:
     variants: ~~gpu
     require:
-      - one_of: ["%intel", "%oneapi"]
+      - one_of: ["%oneapi", "%intel"]
   neurodamus-mousify:
     variants: ~~gpu
     require:
-      - one_of: ["%intel", "%oneapi"]
+      - one_of: ["%oneapi", "%intel"]
   neurodamus-neocortex:
     variants: ~~gpu
     require:
-      - one_of: ["%intel", "%oneapi"]
+      - one_of: ["%oneapi", "%intel"]
   neurodamus-thalamus:
     variants: ~~gpu
     require:
-      - one_of: ["%intel", "%oneapi"]
+      - one_of: ["%oneapi", "%intel"]
   neuron:
     require:
-      - one_of: ["%intel", "%nvhpc", "%oneapi"]
+      - one_of: ["%oneapi", "%nvhpc", "%intel"]
   # Set nlohmann-json because of constraint of libsonata
   # that has a results building multiple nmodl packages
   # depending whether it is build with or without libsonata
@@ -103,7 +103,7 @@ packages:
     version: [3.9.1]
   nmodl:
     require:
-      - one_of: ["%gcc", "%intel", "%nvhpc", "%oneapi"]
+      - one_of: ["%gcc", "%oneapi", "%nvhpc", "%intel"]
   omega-h:
     variants: ~kokkos~trilinos
   opencv:
