--- a/bluebrain/deployment/environments/applications_hpc.yaml
+++ b/bluebrain/deployment/environments/applications_hpc.yaml
@@ -33,10 +33,10 @@ spack:
           ^petsc+complex: '{name}-complex/{version}'
   specs:
     - neuron+tests+coreneuron
-    - neuron+tests+nmodl+sympy+coreneuron
+    - neuron+tests+sympy+coreneuron
     - neuron%nvhpc+caliper+coreneuron+gpu+tests+openmp
-    - neuron%nvhpc+caliper+coreneuron+gpu+tests~openmp+nmodl
-    - neuron%nvhpc+caliper+coreneuron+gpu+tests+openmp+nmodl+sympy
+    - neuron%nvhpc+caliper+coreneuron+gpu+tests~openmp
+    - neuron%nvhpc+caliper+coreneuron+gpu+tests+openmp+sympy
     - nest@2.20.1
     - neurodamus-hippocampus+coreneuron+caliper
     - neurodamus-mousify+coreneuron+caliper
