deploy: arrow for containers should support snappy.

--- a/bluebrain/sysconfig/containers/packages.yaml
+++ b/bluebrain/sysconfig/containers/packages.yaml
@@ -1,4 +1,7 @@
 packages:
+  arrow:
+    # for interoperability with Spark
+    require: "+snappy"
   # Pulls in LLVM and increases container size by 5 Gb
   py-numpy-quaternion:
     variants: ~numba
