deploy: applications_viz.yaml to keep previous version of brayns

--- a/bluebrain/deployment/environments/applications_viz.yaml
+++ b/bluebrain/deployment/environments/applications_viz.yaml
@@ -11,6 +11,7 @@ spack:
           - ultraliser
   specs:
     - brayns
+    - brayns@3.1.2
     - py-brayns
     - brion +python
     - ultraliser ^hdf5~mpi
