--- a/bluebrain/deployment/environments/applications_viz.yaml
+++ b/bluebrain/deployment/environments/applications_viz.yaml
@@ -11,7 +11,10 @@ spack:
           - ultraliser
   specs:
     - brayns
+    - brayns@3.2.0
     - brayns@3.1.2
     - py-brayns
+    - py-brayns@3.2.0
+    - py-brayns@3.1.2
     - brion +python
     - ultraliser ^hdf5~mpi
