py-connectome-manipulator: bump

--- a/bluebrain/deployment/environments/applications_nse.yaml
+++ b/bluebrain/deployment/environments/applications_nse.yaml
@@ -18,6 +18,7 @@ spack:
           - py-bbp-workflow-cli
           - py-bluepy
           - py-bluepysnap
+          - py-connectome-manipulator
           - py-currentscape
           - py-entity-management
           - py-minis-validation
