--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -207,7 +207,7 @@ clean_merged_prs:
 notificatons:
   image: python:3.11-bullseye
   rules:
-    - if: '$CI_COMMIT_BRANCH == $DEPLOYMENT_DEFAULT_BRANCH'
+    - if: '$CI_EXTERNAL_PULL_REQUEST_IID'
       changes:
         - var/spack/repos/builtin/packages/apptainer/*
         - var/spack/repos/builtin/packages/singularity/*
