Revert "Temporary change to make sure the ticket script works"
This reverts commit 00059600da320b7cec6b6c9f0f7bea72034fe9f5.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -208,7 +208,7 @@ notifications:
   needs: [atomic_build]
   image: python:3.11-bullseye
   rules:
-    - if: '$CI_EXTERNAL_PULL_REQUEST_IID'
+    - if: '$CI_COMMIT_BRANCH == $DEPLOYMENT_DEFAULT_BRANCH'
       changes:
         - var/spack/repos/builtin/packages/apptainer/*
         - var/spack/repos/builtin/packages/singularity/*
