--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -214,5 +214,21 @@ notifications:
         - var/spack/repos/builtin/packages/singularity/*
         - var/spack/repos/builtin/packages/singularityce/*
   script:
-    - pip install -r bluebrain/notifications/requirements.txt
-    - python bluebrain/notifications/jira_ticket.py --project HELP --summary "Please run the spack permissions fix scripts" --description-file bluebrain/notifications/apptainer_singularity.txt
+    - apt-get update
+    - apt-get install -y jq wget
+    - echo "Finding ID of the atomic build"
+    - ATOMIC_BUILD_ID=$(wget --header "Content-Type:application/json" --header "PRIVATE-TOKEN:${API_READ_TOKEN}" -O- "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/pipelines/${CI_PIPELINE_ID}/bridges" | jq '.[] | select(.name == "atomic_build") | .downstream_pipeline.id')
+    - echo "Atomic build pipeline ID: ${ATOMIC_BUILD_ID}"
+    - set +e
+      # TODO: API_READ_TOKEN should be replaced by one not tied to my user account
+    - wget --header "Content-Type:application/json" --header "PRIVATE-TOKEN:${API_READ_TOKEN}" -O- "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/pipelines/${ATOMIC_BUILD_ID}/test_report"
+    - |
+      wget --header "Content-Type:application/json" --header "PRIVATE-TOKEN:${API_READ_TOKEN}" -O- "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/pipelines/${ATOMIC_BUILD_ID}/test_report" | jq -e '.test_suites[] | select(.name == "externals") .test_cases[] | select(.classname == "singularity" or .classname == "singularityce" or .classname == "apptainer")'
+      if [[ $? -ne 0 ]]
+      then
+        echo "No test found - no need to warn anyone."
+      else
+        echo "Relevant test found - time to create a HELP ticket"
+        pip install -r bluebrain/notifications/requirements.txt
+        python bluebrain/notifications/jira_ticket.py --project HELP --summary "Please run the spack permissions fix scripts" --description-file bluebrain/notifications/apptainer_singularity.txt
+      fi
