--- a/bluebrain/sysconfig/bluebrain5/packages.yaml
+++ b/bluebrain/sysconfig/bluebrain5/packages.yaml
@@ -136,6 +136,8 @@ packages:
     version: [3.10.8]
   py-numpy:
     version: [1.22.4]  # bluepye{model,fe}: <1.24, neurondamus: <1.23
+  py-numpy-quaternion:
+    require: ~numba~scipy  # pulls in LLVM, spatial-index does not need that
   py-setuptools:
     version: [63.0.0]  # required by py-numpy
   qt:
