Save the logfile

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -242,3 +242,6 @@ version-bumper:
   script:
     - pip install -r bluebrain/version-bumping/requirements.txt
     - python bluebrain/version-bumping/src/bumper.py
+  artifacts:
+    when: always
+    paths: [bumper.log]
