--- a/bluebrain/deployment/environments/applications_science.yaml
+++ b/bluebrain/deployment/environments/applications_science.yaml
@@ -19,7 +19,9 @@ spack:
           - py-bluepyparallel
           - py-connectome-manipulator
           - py-data-integrity-check
+          - py-diameter-synthesis
           - py-efel
+          - py-neurots
           - py-nexusforge
           - py-nexus-sdk
           - py-token-fetch
@@ -63,8 +65,10 @@ spack:
     - py-connectome-manipulator
     - py-connectome-manipulator@0.0.4  # FIXME purge after archive of July 2023 has been deployed
     - py-data-integrity-check
+    - py-diameter-synthesis
     - py-efel
     - py-nexusforge
+    - py-neurots
     - py-nexus-sdk
     - py-token-fetch
     - py-visual-cortex-analysis
