py-archngv: uses outdated dependencies, stop deploying

--- a/bluebrain/deployment/environments/applications_nse.yaml
+++ b/bluebrain/deployment/environments/applications_nse.yaml
@@ -45,7 +45,7 @@ spack:
     - emsim
     - placement-algorithm
     - psp-validation
-    - py-archngv
+    # - py-archngv
     - py-atlas-building-tools
     - py-bbp-analysis-framework
     - py-bbp-workflow
