--- a/bluebrain/deployment/environments/applications_science.yaml
+++ b/bluebrain/deployment/environments/applications_science.yaml
@@ -12,6 +12,7 @@ spack:
           - py-bba-data-push
           - py-bba-webexporter
           - py-bglibpy
+          - py-bluecellulab
           - py-bluepyefe
           - py-bluepyemodel
           - py-bluepymm
@@ -55,6 +56,7 @@ spack:
     - py-bba-data-push
     - py-bba-webexporter
     - py-bglibpy
+    - py-bluecellulab
     - py-bluepyefe
     - py-bluepyemodel
     - py-bluepymm
