--- a/bluebrain/deployment/environments/applications_science.yaml
+++ b/bluebrain/deployment/environments/applications_science.yaml
@@ -37,6 +37,8 @@ spack:
       variants: ~mpi
     netcdf-c:
       variants: ~mpi
+    proj:
+      variants: ~curl
     py-h5py:
       variants: ~mpi
     py-mvdtool:
