deploy: force vtk preferred version
Spack starts trying to build 9.2.2 for some reason, and that fails

--- a/bluebrain/deployment/environments/applications_science.yaml
+++ b/bluebrain/deployment/environments/applications_science.yaml
@@ -33,6 +33,8 @@ spack:
       require: "@8:"
     py-torch:
       require: "@1.13.1"
+    vtk:
+      require: "@:9.0.3"
   specs:
     - py-amici  # BSD-276
     - py-atlannot
