deploy: update gmsh and boost variants on BB5
Build gmsh without support of useless libraries, including med which
depended on an older of hdf5. It induced specs of steps and dependent
packages like py-multiscale-run to duplicate a lot of packages.

Build boost with +serialization by default to meet highfive requirements and
thus reduce the number of boost packages installed.

--- a/bluebrain/deployment/environments/applications_libraries.yaml
+++ b/bluebrain/deployment/environments/applications_libraries.yaml
@@ -40,7 +40,7 @@ spack:
   specs:
     - boost+atomic+chrono+date_time+filesystem+json+locale+log+math+program_options+python+random+regex+serialization+shared+signals+stacktrace+system+test+timer+type_erasure
     - caliper+cuda cuda_arch=70
-    - gmsh+metis+mpi+openmp+shared
+    - gmsh
     - hdf5+mpi
     - highfive+mpi
     - metis+int64
