--- a/bluebrain/sysconfig/bluebrain5/packages.yaml
+++ b/bluebrain/sysconfig/bluebrain5/packages.yaml
@@ -12,7 +12,7 @@ packages:
     # Merged GCC / LLVM requirements
     variants: +gas+gold+ld+plugins~libiberty
   boost:
-    variants: +filesystem+pic+test
+    variants: +filesystem+pic+serialization+test
   coreneuron:
     # Keep this aligned with NEURON, otherwise the Spack solver may decide that
     # rolling back to NEURON 8.2.2 with external CoreNEURON is a net win
@@ -38,7 +38,7 @@ packages:
     # +strip added to force rebuild of GCC with -fno-canonical-system-headers
     variants: +binutils+strip
   gmsh:
-    variants: ~mmg~fltk
+    variants: ~cgns~fltk~med~mmg+mpi+openmp+shared
   hdf5:
     variants: +cxx+hl
   icu4c:
