--- a/bluebrain/sysconfig/bluebrain5/packages.yaml
+++ b/bluebrain/sysconfig/bluebrain5/packages.yaml
@@ -130,7 +130,7 @@ packages:
     - spec: perl@5.16.3
       prefix: /usr
   petsc:
-    variants: ~fortran
+    variants: ~debug~fortran~hypre+int64+mpi
   python:
     variants: +tk
     version: [3.10.8]
