py-bcsb: new version.

--- a/bluebrain/deployment/environments/applications_viz.yaml
+++ b/bluebrain/deployment/environments/applications_viz.yaml
@@ -13,6 +13,7 @@ spack:
   specs:
     - brayns
     - py-bcsb
+    - py-bcsb@2.1.2
     - py-brayns
     - brion +python
     - ultraliser ^hdf5~mpi
